# guidely

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Sparkline.tsx
frontend/src/lib/: api.ts  datetime.ts  format.ts  types.ts
frontend/src/pages/: HomePage.tsx  LearnerDetailPage.tsx  LearnersListPage.tsx  QuizPage.tsx
guidely/api/: main.py  serializers.py
guidely/api/repositories/: __init__.py  fake.py  in_memory.py  postgres.py  store.py
guidely/api/routes/: __init__.py  learners.py  quiz.py  sessions.py
guidely/api/schemas/: __init__.py  learner.py  learner_update.py  quiz.py  session.py
guidely/application/ports/: learner_repository.py  session_repository.py
guidely/application/services/: quiz_generator.py
guidely/application/use_cases/: add_session.py
guidely/domain/enums/: progress_mark.py
guidely/domain/exceptions/: base.py  learner.py  session.py
guidely/domain/models/: learner.py  quiz.py  session.py
guidely/domain/rules/: trends.py
guidely/infrastructure/: db.py  models.py
tests/domain/: test_trends.py
