[project]
name = "guidely"
version = "0.1.0"
description = ""
authors = [
    {name = "Shafir Cohen",email = "shafirco@mta.ac.il"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
